<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"

    tools:context=".RegisterActivity2">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/editText_username"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:paddingLeft="2dp"
        android:layout_marginTop="20dp"
        android:background="#fff"
        android:drawableLeft="@drawable/username"
        android:hint="@string/username"/>
    <EditText
        android:id="@+id/editText_password"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#fff"
        android:drawableLeft="@drawable/password"
        android:hint="@string/password"/>

    <EditText
        android:id="@+id/editText_confirm_password"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#fff"
        android:drawableLeft="@drawable/password"
        android:hint="@string/password"
        tools:text="@string/confirm_password" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:background="#04ea00"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/all_ready_registered"/>

        <TextView
            android:id="@+id/textView_login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/login"/>
    </LinearLayout>

</LinearLayout>